fix: Change selector at start and update function

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <div id="title">Rock-Paper-Scissor</div>
         <div id="start">Start</div>
         <div id="game-board">
-            <div class="box-pick"><i id="rock"  class="btn far fa-hand-rock fa-6x"></i></div>
+            <div class="box-pick"><i id="rock" class="btn far fa-hand-rock fa-6x"></i></div>
             <div class="box-pick"><i id="paper" class="btn far fa-hand-paper fa-6x"></i></div>
-            <div class="box-pick"><i id="scissor" class="btn far fa-hand-scissors fa-6x"></i></div>
+            <div class="box-pick"><i id="scissors" class="btn far fa-hand-scissors fa-6x"></i></div>
         </div>
         <div id="results">
             <div class="box-result">
