--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div id="title">Rock-Paper-Scissor</div>
         <div id="start">Start</div>
-        <div id="game-board">
+        <div class="game-board">
             <div class="box-pick"><i id="rock" class="btn far fa-hand-rock fa-6x"></i></div>
             <div class="box-pick"><i id="paper" class="btn far fa-hand-paper fa-6x"></i></div>
             <div class="box-pick"><i id="scissors" class="btn far fa-hand-scissors fa-6x"></i></div>
